--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@studio-freight/lenis": "^1.0.42",
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
